# update-repo-mgr

./: .gitignore  README.md  TEST.md  TODO  TODO.md  TODO.txt  pyproject.toml  setup.py  ur.py
update_manager/: AddSubCommand.py  CleanSubCommand.py  Database.py  GitRepo.py  ListSubCommand.py  Opts.py  OscRepo.py  Repo.py  RmSubCommand.py  SubCommand.py  SvnRepo.py  UpdateSubCommand.py  Util.py  __init__.py  add.py  add_sub_command.py  clean_sub_command.py  database.py  git_repo.py  list.py  list_sub_command.py  opts.py  osc_repo.py  repo.py  repos.py  rm.py  rm_sub_command.py  sub_command.py  subcmd.py  svn_repo.py  update.py  update_sub_command.py  ur.py  util.py
