[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
name = "ur"
description = "Script for updating and managing repositories"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {email = "leeman.duncan@gmail.com", name = "Lee Duncan"}
]
maintainers = [{email = "leeman.duncan@gmail.com", name = "Lee Duncan"}]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]
dynamic = ["version"]
license-files = ["COPYING"]

[project.urls]
Homepage = "http://github.com/gonzoleeman/update-repo-mgr"

[project.scripts]
ur = "update_manager.ur:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["update_manager"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "F",    # Pyflakes
    "E",    # pycodestyle error
    "W",    # pycodestyle warning
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "YTT",  # flake8-2020
    "S",    # flake8-bandit
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    "EXE",  # flake8-executable
    "FA",   # flake8-future-annotations
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "PIE",  # flake8-pie
    "Q003", # flake8-quotes avoidable-escaped-quote
    "Q004", # flake8-quotes unnecessary-escaped-quote
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "INT",  # flake8-gettext
    "ARG",  # flake8-unused-argument
    #"PTH", # flake8-use-pathlib TODO
    "PL",   # Pylint
    "FLY",  # flynt
    "PERF", # Perflint
    "FURB", # refurb
    "RUF",  # Ruff
    # ignore these?
    "E722",  # TODO do not use bare 'except'
    "S104",  # Possible binding to all interfaces (0.0.0.0)
    "RUF012",  # TODO Mutable class attributes should be annotated with `typing.ClassVar`
    "B904",  # raise-without-from-inside-except
    "ARG002", "PLR6301",  # TODO Unused self, parameter in methods definitions
    "PLR09",  # Too many branches/statements/arguments
    "PLW1514", # TODO `open` in text mode without explicit `encoding` argument
]

ignore = [
    "I001", # Unsorted imports
    "S603", # unsafe subprocess
    "S404", # subprocess is insecure
    "PLR6301", # XXX: because some "clean()" methods do nothing, for now
    "D400", # doc strings shouldn't need a damn period -- it's not prose
    "D415", # doc strings also don't need '!' or '?'
]

[tool.ruff.lint.flake8-quotes]
# Single quotes are currently prevalent in the codebase. Not being checked.
inline-quotes = "single"
